--- a/plantin/public/index.html
+++ b/plantin/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="PlantInLogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/PlantInLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PlantIn</title>
     <script
